--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
   <link rel="stylesheet" href="style.css">
   
 </head>
@@ -108,14 +110,27 @@
                 <div class="post graphd"><img src="img/portfolio8.jpg" alt="Portfolio image"></div>
             </div>
         </section>
-
+        <section class="brand-slider">
+            <h4>OUR CLIENTS</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
+            <div class="owl-carousel">
+                <div><img src="img/Client1.jpg" alt="Client image"></div>
+                <div><img src="img/Client2.jpg" alt="Client image"></div>
+                <div><img src="img/Client3.jpg" alt="Client image"></div>
+                <div><img src="img/Client4.jpg" alt="Client image"></div>
+                <div><img src="img/Client5.jpg" alt="Client image"></div>
+                <div><img src="img/Client6.jpg" alt="Client image"></div>
+                <div><img src="img/Client7.jpg" alt="Client image"></div>
+                <div><img src="img/Client8.jpg" alt="Client image"></div>
+            </div>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
-    </script>        
-
+    </script>
+    <script src="owlcarousel/owl.carousel.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
