--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
   <link rel="stylesheet" href="style.css">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-
+  
     <header>
         <div class="header-container">
             <div class="logo">
@@ -41,7 +41,6 @@
                 <div><p>the appropriate quality</p></div>
             </div>
         </section>
-
         <section class="specialize">
             <div class="specialize-container">
                     <h3>We create quality designs.</h3>
@@ -86,7 +85,6 @@
                     </div>
             </div>
         </section>
-
         <section class="portfolio">
             <h4>OUR WORK</h4>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
@@ -125,7 +123,6 @@
             </div>
         </section>
     </main>
-
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
